Avoid text wrap

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -52,14 +52,14 @@ pre {
 #sidebar {
     flex: 0 0 auto; 
     display: flex;
-    width: 125px;
+    width: 140px;
     padding-top: 8px;
     flex-direction: column;
     background: #2a2a2a;
     border-right: 1px solid #444;
     box-shadow: 2px 0 4px #0007;
     transition: transform .3s;
-    z-index: 100;
+    z-index: 10;
 }
 #sidebar.hidden { transform: translateX(-100%); }
 
@@ -116,7 +116,7 @@ pre {
 .sidebar-content button {
     width: 100%;
     text-align: left;
-    padding:  8px;
+    padding: 8px;
     margin: 1px 0;
     border: none;
     border-radius: 8px;
